# prysm

./: .bazelrc  .deepsource.toml  .gitignore  .golangci.yml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  nogo_config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: changelog.yml  check-specrefs.yml  clang-format.yml  fuzz.yml  go.yml  horusec.yaml
api/: BUILD.bazel  jwt.go  jwt_test.go
api/apiutil/: BUILD.bazel  common.go  common_test.go  header.go  header_test.go
api/client/: BUILD.bazel  client_test.go  transport.go  transport_test.go
api/grpc/: BUILD.bazel  grpcutils.go  grpcutils_test.go
api/pagination/: BUILD.bazel  pagination.go  pagination_test.go
api/server/: BUILD.bazel  error.go  error_test.go
async/: BUILD.bazel  benchmark_test.go  debounce_test.go  every_test.go  scatter_test.go
async/abool/: BUILD.bazel
async/event/: BUILD.bazel  example_scope_test.go  example_subscription_test.go  interface.go  subscription.go  subscription_test.go
beacon-chain/: README.md
beacon-chain/blockchain/: BUILD.bazel  chain_info.go  chain_info_forkchoice.go  chain_info_norace_test.go  chain_info_test.go  currently_syncing_block.go  defragment.go  error.go  error_test.go  execution_engine.go  execution_engine_test.go  forkchoice_update_execution.go  forkchoice_update_execution_test.go  head.go  head_sync_committee_info.go  head_sync_committee_info_test.go  head_test.go  init_sync_process_block.go  init_sync_process_block_test.go  init_test.go  log.go  log_test.go  metrics.go  metrics_test.go  mock_test.go  options.go  pow_block.go  pow_block_test.go  process_attestation.go  process_attestation_helpers.go  process_attestation_test.go  process_block.go  process_block_helpers.go  process_block_test.go  receive_attestation.go  receive_attestation_test.go  receive_blob.go  receive_block.go  receive_block_test.go  receive_data_column.go  (+10 more)
beacon-chain/builder/: BUILD.bazel  option.go  service.go  service_test.go
beacon-chain/cache/: BUILD.bazel  active_balance.go  active_balance_disabled.go  active_balance_test.go  attestation.go  attestation_data.go  attestation_data_test.go  attestation_test.go  balance_cache_key.go  checkpoint_state.go  checkpoint_state_test.go  committee.go  committee_disabled.go  committee_fuzz_test.go  committee_test.go  committees.go  common.go  interfaces.go  payload_id.go  payload_id_test.go  private_access_test.go  proposer_indices.go  proposer_indices_disabled.go  proposer_indices_test.go  proposer_indices_type.go  registration.go  registration_test.go  skip_slot_cache.go  skip_slot_cache_test.go  subnet_ids.go  subnet_ids_test.go  sync_committee.go  sync_committee_disabled.go  sync_committee_head_state.go  sync_committee_head_state_test.go  sync_committee_test.go  sync_subnet_ids.go  sync_subnet_ids_test.go  tracked_validators.go  tracked_validators_test.go
beacon-chain/das/: BUILD.bazel  (+14 more)
beacon-chain/sync/backfill/coverage/: BUILD.bazel  coverage.go
changelog/: 2025-08-25-docs-links.md  Alleysira-fix-get-committees-slot-not-in-epoch.md  Alleysira-fix-meta-in-getPeers-resp.md  DeVikingMark_fix-web3signer-test-error-handling.md  Fibonacci747_chore-remove-dead-stol-param.md  Forostovec_fix-execution-option.md  Galoretka_convert-progress.md  Galoretka_feature-slasher-feed-use-service-ctx.md  Galoretka_fix-leakybucket-test-duplicate.md  James-prysm_parallel-goodbyes.md  James-prysm_persistent-seq-number.md  MozirDmitriy_fix_kv-recover-state-summurt-bucket.md  SashaMalysehko_fix-return-after-check.md  Snezhkko_fix-type.md  aarsh-revert-autonatv2.md  aarsh_libp2p_autonatv2_per_address.md  add-blob-schedule-to-config-spec-endpoint.md  avoid_kzg_send_after_context_cancel.md  bastin_abstract-save-update.md  bastin_abstract-update-validation.md  bastin_add-lc-req-resp.md  bastin_add-lc-spec-test-mainnet.md  bastin_add-lc-spec-test-minimal.md  bastin_attestation-api-ssz.md  bastin_canonical-light-client-updates.md  bastin_checkpoints-only-bootstraps.md  bastin_delayed-lc-broadcast.md  bastin_fix-lc-versioning.md  bastin_fix-lcp2p-bug.md  bastin_fix-wording.md  bastin_has-state-using-diff.md  bastin_lc-fulu-spectest.md  bastin_lc-p2p-validation.md  bastin_lc-prefix.md  bastin_lc-rpc-endpoint-flag.md  bastin_move-lc-package-out-of-core.md  bastin_move_broadcast_to_store.md  bastin_put-lc-store-behind-flag.md  bastin_refactor-lc-bootstrap-tests.md  bastin_refactor-lc-kv-tests.md  (+424 more)
cmd/: BUILD.bazel  config.go  config_test.go  defaults.go  flags.go  flags_test.go  helpers.go  helpers_test.go
config/: BUILD.bazel  util.go  util_test.go
consensus-types/: BUILD.bazel  types.go
consensus-types/helpers/: BUILD.bazel  comparisons.go  comparisons_test.go
encoding/ssz/query/: BUILD.bazel  analyzer.go  analyzer_test.go  bitlist.go  bitvector.go  container.go  generalized_index.go  generalized_index_test.go  list.go  path.go  path_test.go  query.go  query_test.go  ssz_info.go  ssz_object.go  ssz_type.go  tag_parser.go  tag_parser_test.go  vector.go
encoding/ssz/query/testutil/: BUILD.bazel  runner.go  type.go  util.go
genesis/: BUILD.bazel  embedded.go  embedded_test.go  errors.go  initialize.go  initialize_test.go  providers.go  storage.go  testing.go
hack/: update-go-pbs.sh  update-mockgen.sh
math/: BUILD.bazel  math_helper.go  math_helper_test.go
network/: BUILD.bazel  auth_test.go  endpoint.go  endpoint_test.go  external_ip_test.go
proto/: ssz_proto_library.bzl
runtime/: BUILD.bazel  service_registry.go  service_registry_test.go
specrefs/: .ethspecify.yml  configs.yml  constants.yml  containers.yml  dataclasses.yml  functions.yml  presets.yml
testing/spectest/mainnet/deneb/light_client/: BUILD.bazel  single_merkle_proof_test.go
testing/spectest/minimal/electra/light_client/: BUILD.bazel  single_merkle_proof_test.go  update_ranking_test.go
time/: BUILD.bazel
time/mclock/: BUILD.bazel
tools/: download_spectests.bzl  prysm_image.bzl
tools/analyzers/modernize/slicescontains/: BUILD.bazel
validator/: README.md
(+3252 files in other folders)
