load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "analyzer.go",
        "container.go",
        "list.go",
        "path.go",
        "query.go",
        "ssz_info.go",
        "ssz_type.go",
        "tag_parser.go",
        "vector.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v6/encoding/ssz/query",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "analyzer_test.go",
        "path_test.go",
        "query_test.go",
        "tag_parser_test.go",
    ],
    deps = [
        ":go_default_library",
        "//encoding/ssz/query/testutil:go_default_library",
        "//proto/ssz_query:go_default_library",
        "//testing/require:go_default_library",
    ],
)
