load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "analyzer.go",
        "bitlist.go",
        "bitvector.go",
        "container.go",
        "generalized_index.go",
        "list.go",
        "path.go",
        "query.go",
        "ssz_info.go",
        "ssz_object.go",
        "ssz_type.go",
        "tag_parser.go",
        "vector.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v7/encoding/ssz/query",
    visibility = ["//visibility:public"],
    deps = [
        "//encoding/ssz:go_default_library",
        "@com_github_prysmaticlabs_go_bitfield//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "generalized_index_test.go",
        "path_test.go",
        "query_test.go",
        "tag_parser_test.go",
    ],
    deps = [
        ":go_default_library",
        "//encoding/ssz/query/testutil:go_default_library",
        "//proto/ssz_query/testing:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_prysmaticlabs_go_bitfield//:go_default_library",
    ],
)
