load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = [
        "runner.go",
        "type.go",
        "util.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v6/encoding/ssz/query/testutil",
    visibility = ["//visibility:public"],
    deps = [
        "//encoding/ssz/query:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_prysmaticlabs_fastssz//:go_default_library",
        "@com_github_prysmaticlabs_go_bitfield//:go_default_library",
    ],
)
